--- a/vpnLib/build.gradle
+++ b/vpnLib/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 android {
-    compileSdkVersion 31
+    compileSdk 33
 
     defaultConfig {
         minSdkVersion 16
